# haskell-language-server

./: cabal.project  haskell-language-server.cabal  stack-8.10.1.yaml  stack-8.10.2.yaml  stack-8.10.3.yaml  stack-8.6.4.yaml  stack-8.6.5.yaml  stack-8.8.2.yaml  stack-8.8.3.yaml  stack-8.8.4.yaml  stack.yaml
exe/: Main.hs
ghcide/: ghcide.cabal
ghcide/bench/: config.yaml
ghcide/bench/lib/: Experiments.hs
ghcide/exe/: Arguments.hs  Main.hs
ghcide/session-loader/Development/IDE/: Session.hs
ghcide/src/Development/IDE/Core/: Compile.hs  PositionMapping.hs  RuleTypes.hs  Rules.hs  Shake.hs
ghcide/src/Development/IDE/GHC/: Compat.hs  CoreFile.hs  Util.hs
ghcide/src/Development/IDE/LSP/: HoverDefinition.hs
ghcide/src/Development/IDE/Plugin/: Test.hs
ghcide/src/Development/IDE/Plugin/Completions/: Logic.hs
ghcide/src/Development/IDE/Spans/: AtPoint.hs  Documentation.hs
ghcide/test/exe/: Main.hs
plugins/default/src/Ide/: LocalBindings.hs
plugins/default/src/Ide/Plugin/Tactic/: Machinery.hs
plugins/hls-class-plugin/src/Ide/Plugin/: Class.hs
plugins/tactics/src/Ide/Plugin/: Tactic.hs
src/Ide/: Main.hs
src/Ide/Plugin/: TH.hs
test/functional/: Progress.hs  Reference.hs  TypeDefinition.hs
test/testdata/references/: cabal.project  hie.yaml  references.cabal
test/testdata/references/dependencyfoo/: dependencyfoo.cabal
test/testdata/references/dependencyfoo/src/: ModuleInDependency.hs  OtherModuleInDependency.hs
test/testdata/references/exe/: Main.hs
test/utils/Test/Hls/: Util.hs
