cabal-version:       >=1.10

name:                references
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     OtherOtherModule, OtherModule, References
  build-depends:       base >=4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable references
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , dependencyfoo
  hs-source-dirs:      exe
  default-language:    Haskell2010
